# ZKVault

./: CMakeLists.txt  README.md
src/: main.cpp
src/app/: frontend_contract.cpp  frontend_contract.hpp
src/shell/: interactive_shell.cpp  shell_runtime.cpp  shell_runtime.hpp
src/storage/: atomic_file.cpp  atomic_file.hpp  json_storage.cpp  master_key_storage.cpp
src/terminal/: display.cpp  display.hpp  prompt.cpp
src/tui/: terminal_ui.cpp  terminal_ui.hpp  terminal_ui_commands.cpp  terminal_ui_commands.hpp  terminal_ui_confirmations.cpp  terminal_ui_confirmations.hpp  terminal_ui_flow.cpp  terminal_ui_forms.cpp  terminal_ui_forms.hpp  terminal_ui_runtime.cpp  terminal_ui_runtime.hpp
tests/: cli_error_paths_test.sh  cli_smoke_test.sh  frontend_contract_test.cpp  prompt_backspace_test.cpp  shell_smoke_test.sh  terminal_display_test.cpp  tui_smoke_test.cpp
